# SandboxEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  main.cpp
Include/Engine/: Engine.h
Include/Engine/Debugging/: Debugging.h
Include/Environment/Chunk/: Chunk.h
Include/IO/: FileIO.h  FileOpenException.h
Include/Physics/: Physics.h
Include/Physics/MarchingCubes/: Cell.h  CellChunk.h  CellGrid.h  MarchingCubes.h
Include/Physics/Material/: Material.h  MaterialState.h  Materials.h
Include/Rendering/: Renderer.h
Include/Rendering/Device/: CommandPool.h  Device.h  DeviceMemoryProperties.h  PhysicalDevice.h  QueueFamilyIndices.h  SwapChainSupportDetails.h
Include/Rendering/GraphicsPipeline/: GraphicsPipeline.h  GraphicsPipelineConfigurationInfo.h  GraphicsShaderModules.h  PipelineConfigurationInfo.h  PushConstantData.h
Include/Rendering/Instance/: Instance.h
Include/Rendering/Model/: Model.h  Vertex.h  VertexBuffer.h
Include/Rendering/Queue/: GraphicsQueue.h  PresentQueue.h  Queue.h
Include/Rendering/Surface/: Surface.h
Include/Rendering/SwapChain/: RenderPass.h  SwapChain.h  SwapChainImage.h  SwapChainSupport.h  SwapChainSupportDetails.h
Include/Rendering/Window/: Window.h
Shaders/: compile_shaders.bat  default.frag  default.vert
Source/Engine/: Engine.cpp
Source/Engine/Debugging/: Debugging.cpp
Source/Environment/Chunk/: Chunk.cpp
Source/IO/: FileIO.cpp  FileOpenException.cpp
Source/Physics/MarchingCubes/: Cell.cpp  CellChunk.cpp  CellGrid.cpp
Source/Physics/Material/: Material.cpp  Materials.cpp
Source/Rendering/: Renderer.cpp
(+24 files in other folders)
